Feat: add more filter flags to user stats lists apis
